--- a/homstPrj/homst/templates/homst/community.html
+++ b/homstPrj/homst/templates/homst/community.html
@@ -35,7 +35,7 @@
             <a href="{% url 'main' %}"><img href="{% url 'main' %}" src="{%static 'img/homst_logo.svg' %}" alt="여기톤 로고"></a>
         </div>
         <div class="page">
-            <a href="community.html">커뮤니티</a>
+            <a href="{% url 'community' %}">커뮤니티</a>
             <a href="{% url 'mypage' %}"><img src="{%static 'img/mypage_profile.svg'%}" class="mypage"></a>
         </div>
     </nav>
