--- a/homstPrj/static/css/community_check.css
+++ b/homstPrj/static/css/community_check.css
@@ -1,8 +1,49 @@
+:root {
+    --white: #fff;
+    --black: #000;
+    --home_head_back: #BBBBBB;
+    --home_head_btn: #FE6683;
+    --home_head_item_back: #F5F5F5;
+    --home_head_item_txt: #3B3B3B;
+
+    --img_back: #D9D9D9;
+
+    --home_head_popup_back: #EAEAEA;
+    --home_head_popup_icon: #8C8C8C;
+    --home_main_item_back: #D9D9D9;
+    --home_main_item_grade: #8C8C8C;
+}
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'R';
+}
+@font-face {
+    font-family: 'B';
+    src: url('../font/Pretendard-Bold.woff') format('woff');
+}
+@font-face {
+    font-family: 'S';
+    src: url('../font/Pretendard-SemiBold.woff') format('woff');
+}
+@font-face {
+    font-family: 'M';
+    src:url('../font/Pretendard-Medium.woff') format('woff');
+}
+@font-face {
+    font-family: 'R';
+    src: url('../font/Pretendard-Regular.woff') format('woff');
+}
+@font-face {
+    font-family: 'L';
+    src:url('../font/Pretendard-Light.woff') format('woff');
+}
+
 /* 기본 스타일 리셋 및 폰트 정의 */
 body, h2, h3, p {
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
+    font-family: 'R';
     color: #333;
 }
 
