--- a/homst/templates/homst/record_detail.html
+++ b/homst/templates/homst/record_detail.html
@@ -34,5 +34,9 @@
     <br />
     <h3>숙소 안전 정보</h3>
     정보
+    <br /><br />
+    <hr />
+    <h3>객실 예약</h3>
+    <a href="{% url 'reserve' accommodation.id %}">객실 예약</a>
   </body>
 </html>
