--- a/homst/templates/homst/reserveok.html
+++ b/homst/templates/homst/reserveok.html
@@ -6,6 +6,6 @@
   <body>
     <h1>예약이 성공적으로 완료되었습니다!</h1>
     <p>예약 ID: {{ accommodation_id }}</p>
-    <a href="{% url 'mypage' %}">마이페이지로 이동하기</a>
+    <a href="{% url 'mypage' %}">마이페이지로 이동</a>
   </body>
 </html>
