--- a/homstPrj/static/css/community_write.css
+++ b/homstPrj/static/css/community_write.css
@@ -76,6 +76,18 @@ nav {
     margin-right: 130px;
 }
 
+
+.login_header_pro {
+    padding: 9px 18px;
+    margin-right: 131px;
+    margin-left: 21px;
+    background-color: #FE6683;
+    color: var(--white);
+    font-size: 14px;
+    font-family: "M";
+    border-radius: 8.18px;
+  }
+
 /*본문*/
 
 .container {
